# mousefinity

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.hbs  about.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
contrib/: README.md  rdev-macos-drag-events.patch
crates/mousefinity/: Cargo.toml
crates/mousefinity/src/: capture.rs  clipboard.rs  config.rs  diag.rs  doctor.rs  engine.rs  inject.rs  ipc.rs  keymap.rs  main.rs  mesh.rs  net.rs  tui.rs  upgrade.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
relay/: iroh-relay.service  relay.example.toml
