[package]
name = "mousefinity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Share mouse, keyboard, clipboard and files across hosts over secure P2P"

[dependencies]
mousefinity-proto = { path = "../proto" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# unstable-net-report powers `mousefinity doctor` diagnostics
iroh = { version = "1.0.2", features = ["unstable-net-report"] }
rdev = { version = "0.5.3", features = ["unstable_grab"] }
enigo = "0.6.1"
arboard = "3.6.1"
dirs = "6.0.0"
toml = "1.1.3"
data-encoding = "2.11.0"
rand = "0.10.2"
serde_json = "1.0.150"
iroh-mdns-address-lookup = "0.4.0"
ratatui = "0.30.2"
rustls-native-certs = "0.8.4"
blake3 = "1.8.5"
postcard = "1.1.3"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_HiDpi"] }
