[package]
name = "mousefinity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Share mouse, keyboard, clipboard and files across hosts over secure P2P"

[dependencies]
mousefinity-proto = { path = "../proto" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# unstable-net-report powers `mousefinity doctor` diagnostics
iroh = { version = "1.0.2", features = ["unstable-net-report"] }
rdev = { version = "0.5.3", features = ["unstable_grab"] }
enigo = "0.6.1"
arboard = "3.6.1"
dirs = "6.0.0"
toml = "1.1.3"
data-encoding = "2.11.0"
rand = "0.10.2"
serde_json = "1.0.150"
iroh-mdns-address-lookup = "0.4.0"
ratatui = "0.30.2"
rustls-native-certs = "0.8.4"
blake3 = "1.8.5"
postcard = "1.1.3"
# `mousefinity upgrade`: release lookup, download, and integrity check.
# rustls (not native-tls) keeps the single `ring` provider iroh already uses;
# native roots match the relay's TLS policy on intercepting corporate proxies.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "rustls-native-certs",
    "json",
    "http2",
] }
# Pin the TLS backend to the `ring` provider iroh already pulls in. Taking
# reqwest's default `rustls` feature instead would add aws-lc-rs, and with it
# a cmake/nasm build requirement this project does not otherwise have.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
# Windows releases ship as .zip, everything else as .tar.gz. Both readers are
# built on every platform so the zip path is testable off Windows.
zip = { version = "2", default-features = false, features = ["deflate"] }

[target."cfg(unix)".dependencies]
# gethostname: macOS exports neither COMPUTERNAME nor HOSTNAME.
libc = "0.2"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_HiDpi"] }
